--- a/src/Makefile.win32
+++ b/src/Makefile.win32
@@ -1,6 +1,6 @@
 OBJDIR=..\obj
 _OBJ = dffread.obj dffwrite.obj ps2native.obj xboxnative.obj txdread.obj\
-txdwrite.obj renderware.obj ifpread.obj dffconv.obj txdconv.obj txdex.obj ifp.obj
+txdwrite.obj renderware.obj dffconv.obj txdconv.obj txdex.obj
 OBJ = $(OBJDIR)\$(_OBJ: = ..\obj\) # can't subsitute $(OBJDIR) here
 HEADER = renderware.h
 CC = cl
